speed up cold start by native compile